force-app/main/default/objects/WorkStep/fields/Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Status_Color__c</fullName>
    <formula>IF(ISPICKVAL(Status,&apos;Completed&apos;),&apos;🟢&apos;, IF(ISPICKVAL(Status,&apos;In Progress&apos;),	&apos;🟡&apos;, &apos;🔵&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Color</label>
    <type>Text</type>
</CustomField>