force-app/main/default/objects/WorkStep/fields/StatusImageFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusImageFormula__c</fullName>
    <formula>CASE(Status, &apos;New&apos;,&apos;⚪️&apos;, &apos;Pass&apos;,&apos;🟢&apos;, &apos;Fail&apos;,&apos;🔴&apos;,&apos;Fail not reported&apos;,&apos;🟠&apos;,&apos;Under test&apos;,&apos;🔵&apos;,&apos;Remark&apos;,&apos;🟣&apos;,&apos;Not Applicable&apos;,&apos;⚫️&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Color</label>
    <type>Text</type>
</CustomField>