force-app/main/default/objects/WorkStep/fields/TICWSGroup__c.field-meta.xml
<CustomField>
    <fullName>TICWSGroup__c</fullName>
    <formula>WorkOrder.WorkOrderNumber + WorkOrderLineItem.TICSample__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkStep Group</label>
    <type>Text</type>
</CustomField>